kubernetes/dependency-track/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dependency-track
  namespace: dependency-track
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "${ACM_CERTIFICATE_ARN}"
spec:
  ingressClassName: alb
  rules:
    - host: dependency-track.ssf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dependency-track-frontend
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dependency-track-apiserver
                port:
                  number: 8080
